# WaveDave

./: README.md  pyproject.toml
examples/: example_comparison_breakdown.py  example_complete.py  example_elemental_plots.py  example_integrated_forecast.py  example_report.py  example_simple_report.py  example_spectral_energy_and_roseplots.py  import.py  import_infoplaza.py  import_obscape.py  process_octopus.py
examples/datafiles/: marine_forecast_report_20240310.csv  marine_forecast_report_20240311.csv  marine_forecast_report_48127014-240311-110049_20240311.csv  obscape_buoy.csv
src/wavedave/: __init__.py  helpers.py  settings.py  spectra.py
src/wavedave/integrated_forecast/: integrated_forecast.py
src/wavedave/pdf/: document.py
src/wavedave/plots/: elements.py  helpers.py  wavespectrum.py
src/wavedave/rao/: rao.py
src/wavedave/readers/: infoplaza.py
src/wavedave/reports/: metocean.py  standard_sections.py
src/wavedave/sensors/: timeseries.py  witmotion.py
src/wavedave/to_smooth/: __init__.py  bins.py  convert.py  smooth.py
tests/: conftest.py
tests/obscape/: partial_file.csv  test_obs_grid.py
tests/test_bandpass/: test_bandpass.py
tests/test_crosschecks/: test_bands.py  test_tp.py
tests/test_files/: octopus.csv
tests/test_pdf/: test_pdf_basics.py
tests/test_plots/: test_plots.py
tests/test_rao/: test_1d_response_calc.py  test_phase_interpolation.py
tests/test_wr_props/: test_default_properties.py  test_time_properties.py
